--- a/DayOne.CSharp.csproj
+++ b/DayOne.CSharp.csproj
@@ -75,9 +75,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\MouseLook_H.cs" />
-    <Compile Include="Assets\Scripts\MouseLook_V.cs" />
-    <Compile Include="Assets\Scripts\PlayerMove.cs" />
+    <Compile Include="Assets\Scripts\Player\MouseLook_H.cs" />
+    <Compile Include="Assets\Scripts\Player\MouseLook_V.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerMove.cs" />
+    <Compile Include="Assets\Scripts\UI\HideCursor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
